--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -271,7 +271,7 @@
 \cleartorecto
 \begingroup
 \microtypesetup{protrusion=false, expansion=false}
-%\raggedright
+\raggedright
 \phantomsection
 \addcontentsline{toc}{chapter}{Bibliography}
 \printbibliography[heading=memoir]
