--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -479,6 +479,23 @@
   urldate = {2019-10-09}
 }
 
+@article{kelsey1995correspondence,
+  title = {A Correspondence between Continuation Passing Style and Static Single Assignment Form},
+  author = {Kelsey, Richard A.},
+  date = {1995-03-01},
+  journaltitle = {ACM SIGPLAN Notices},
+  shortjournal = {SIGPLAN Not.},
+  volume = {30},
+  pages = {13--22},
+  issn = {0362-1340},
+  doi = {10.1145/202530.202532},
+  url = {https://doi.org/10.1145/202530.202532},
+  urldate = {2020-07-23},
+  abstract = {We define syntactic transformations that convert continuation passing style (CPS) programs into static single assignment form (SSA) and vice versa. Some CPS programs cannot be converted to SSA, but these are not produced by the usual CPS transformation. The CPS→SSA transformation is especially helpful for compiling functional programs. Many optimizations that normally require flow analysis can be performed directly on functional CPS programs by viewing them as SSA programs. We also present a simple program transformation that merges CPS procedures together and by doing so greatly increases the scope of the SSA flow information. This transformation is useful for analyzing loops expressed as recursive procedures.},
+  file = {/home/philipp/Zotero/storage/M57YS4MD/Kelsey_1995_A correspondence between continuation passing style and static single.pdf},
+  number = {3}
+}
+
 @book{koller2009probabilistic,
   ids = {koller2009probabilistic},
   title = {Probabilistic Graphical Models: Principles and Techniques},
@@ -672,6 +689,19 @@
   file = {/home/philipp/Zotero/storage/RHKSTFEJ/Muchnick - 1997 - Advanced compiler design and implementation.pdf},
   langid = {english},
   pagetotal = {856}
+}
+
+@book{murphy2012machine,
+  title = {Machine Learning: A Probabilistic Perspective},
+  shorttitle = {Machine Learning},
+  author = {Murphy, Kevin P.},
+  date = {2012},
+  publisher = {{MIT Press}},
+  location = {{Cambridge, MA}},
+  file = {/home/philipp/Zotero/storage/88WAUMU6/Murphy - 2012 - Machine learning a probabilistic perspective.pdf},
+  isbn = {978-0-262-01802-9},
+  pagetotal = {1067},
+  series = {Adaptive Computation and Machine Learning Series}
 }
 
 @article{murray2017delayed,
