--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -896,6 +896,41 @@
   type = {Dissertation}
 }
 
+@inproceedings{scibior2015practical,
+  title = {Practical Probabilistic Programming with Monads},
+  booktitle = {Proceedings of the 8th {{ACM SIGPLAN Symposium}} on {{Haskell}} - {{Haskell}} 2015},
+  author = {Ścibior, Adam and Ghahramani, Zoubin and Gordon, Andrew D.},
+  date = {2015},
+  pages = {165--176},
+  publisher = {{ACM Press}},
+  location = {{Vancouver, BC, Canada}},
+  doi = {10.1145/2804302.2804317},
+  url = {http://dl.acm.org/citation.cfm?doid=2804302.2804317},
+  urldate = {2020-07-23},
+  abstract = {The machine learning community has recently shown a lot of interest in practical probabilistic programming systems that target the problem of Bayesian inference. Such systems come in different forms, but they all express probabilistic models as computational processes using syntax resembling programming languages. In the functional programming community monads are known to offer a convenient and elegant abstraction for programming with probability distributions, but their use is often limited to very simple inference problems. We show that it is possible to use the monad abstraction to construct probabilistic models for machine learning, while still offering good performance of inference in challenging models. We use a GADT as an underlying representation of a probability distribution and apply Sequential Monte Carlo-based methods to achieve efficient inference. We define a formal semantics via measure theory. We demonstrate a clean and elegant implementation that achieves performance comparable with Anglican, a stateof-the-art probabilistic programming system.},
+  eventtitle = {The 8th {{ACM SIGPLAN Symposium}}},
+  file = {/home/philipp/Zotero/storage/3DJ2YMXB/Ścibior et al. - 2015 - Practical probabilistic programming with monads.pdf},
+  isbn = {978-1-4503-3808-0},
+  langid = {english}
+}
+
+@article{scibior2018functional,
+  title = {Functional Programming for Modular {{Bayesian}} Inference},
+  author = {Ścibior, Adam and Kammar, Ohad and Ghahramani, Zoubin},
+  date = {2018-07-30},
+  journaltitle = {Proceedings of the ACM on Programming Languages},
+  shortjournal = {Proc. ACM Program. Lang.},
+  volume = {2},
+  pages = {1--29},
+  issn = {2475-1421, 2475-1421},
+  doi = {10.1145/3236778},
+  url = {https://dl.acm.org/doi/10.1145/3236778},
+  urldate = {2020-07-23},
+  file = {/home/philipp/Zotero/storage/J3UHJCXN/Ścibior et al. - 2018 - Functional programming for modular Bayesian infere.pdf},
+  issue = {ICFP},
+  langid = {english}
+}
+
 @inproceedings{socher2011parsing,
   title = {Parsing {{Natural Scenes}} and {{Natural Language}} with {{Recursive Neural Networks}}},
   booktitle = {Proceedings of the 28th International Conference on International Conference on Machine Learning},
