--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -17,6 +17,17 @@
   pagetotal = {23}
 }
 
+@unpublished{abadi2015tensorflow,
+  title = {{{TensorFlow}}: {{Large}}-Scale Machine Learning on Heterogeneous Systems},
+  author = {Abadi, Martín and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S. and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Goodfellow, Ian and Harp, Andrew and Irving, Geoffrey and Isard, Michael and Jia, Yangqing and Jozefowicz, Rafal and Kaiser, Lukasz and Kudlur, Manjunath and Levenberg, Josh and Mané, Dandelion and Monga, Rajat and Moore, Sherry and Murray, Derek and Olah, Chris and Schuster, Mike and Shlens, Jonathon and Steiner, Benoit and Sutskever, Ilya and Talwar, Kunal and Tucker, Paul and Vanhoucke, Vincent and Vasudevan, Vijay and Viégas, Fernanda and Vinyals, Oriol and Warden, Pete and Wattenberg, Martin and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
+  date = {2015},
+  url = {https://www.tensorflow.org/},
+  urldate = {2020-07-29},
+  file = {/home/philipp/Zotero/storage/YG5QTYPF/Abadi et al_2015_TensorFlow.pdf},
+  howpublished = {Preliminary White Paper},
+  type = {Preliminary White Paper}
+}
+
 @article{andrieu2010particlea,
   title = {Particle {{Markov}} Chain {{Monte Carlo}} Methods},
   shorttitle = {Particle {{Markov}} Chain {{Monte Carlo}} Methods},
@@ -257,6 +268,23 @@
   langid = {english}
 }
 
+@article{gebremedhin2020introduction,
+  title = {An Introduction to Algorithmic Differentiation},
+  author = {Gebremedhin, Assefaw H. and Walther, Andrea},
+  date = {2020},
+  journaltitle = {WIREs Data Mining and Knowledge Discovery},
+  volume = {10},
+  pages = {e1334},
+  issn = {1942-4795},
+  doi = {10.1002/widm.1334},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/widm.1334},
+  urldate = {2020-07-29},
+  abstract = {Algorithmic differentiation (AD), also known as automatic differentiation, is a technology for accurate and efficient evaluation of derivatives of a function given as a computer model. The evaluations of such models are essential building blocks in numerous scientific computing and data analysis applications, including optimization, parameter identification, sensitivity analysis, uncertainty quantification, nonlinear equation solving, and integration of differential equations. We provide an introduction to AD and present its basic ideas and techniques, some of its most important results, the implementation paradigms it relies on, the connection it has to other domains including machine learning and parallel computing, and a few of the major open problems in the area. Topics we discuss include: forward mode and reverse mode of AD, higher-order derivatives, operator overloading and source transformation, sparsity exploitation, checkpointing, cross-country mode, and differentiating iterative processes. This article is categorized under: Algorithmic Development {$>$} Scalable Statistical Methods Technologies {$>$} Data Preprocessing},
+  file = {/home/philipp/Zotero/storage/XAJGF8EA/Gebremedhin_Walther_2020_An introduction to algorithmic differentiation.pdf;/home/philipp/Zotero/storage/G33NZV4X/widm.html},
+  langid = {english},
+  number = {1}
+}
+
 @article{geweke2004getting,
   title = {Getting {{It Right}}: {{Joint Distribution Tests}} of {{Posterior Simulators}}},
   shorttitle = {Getting {{It Right}}},
@@ -314,6 +342,17 @@
   date = {2014},
   url = {http://dippl.org},
   urldate = {2019-10-15}
+}
+
+@article{gowda2019sparsity,
+  title = {Sparsity {{Programming}}: {{Automated Sparsity}}-{{Aware Optimizations}} in {{Differentiable Programming}}},
+  shorttitle = {Sparsity {{Programming}}},
+  author = {Gowda, Shashi and Ma, Yingbo and Churavy, Valentin and Edelman, Alan and Rackauckas, Christopher},
+  date = {2019-09-16},
+  url = {https://openreview.net/forum?id=rJlPdcY38B},
+  urldate = {2020-07-29},
+  abstract = {Previous studies in numerical analysis have shown how the calculation of a Jacobian, Hessian, and their factorizations can be accelerated when their sparsity pattern is known. However, accurate...},
+  file = {/home/philipp/Zotero/storage/FTEFLWGT/Gowda et al_2019_Sparsity Programming.pdf;/home/philipp/Zotero/storage/ZDXPHV3A/forum.html}
 }
 
 @book{griewank2008evaluating,
@@ -497,7 +536,6 @@
 }
 
 @book{koller2009probabilistic,
-  ids = {koller2009probabilistic},
   title = {Probabilistic Graphical Models: Principles and Techniques},
   shorttitle = {Probabilistic Graphical Models},
   author = {Koller, Daphne and Friedman, Nir},
@@ -520,6 +558,24 @@
   urldate = {2019-03-22},
   eventtitle = {Proceedings of the {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
   file = {/home/philipp/Zotero/storage/RZAMR9ES/Kulkarni et al_2015_Picture.pdf;/home/philipp/Zotero/storage/L7BIASBI/Kulkarni_Picture_A_Probabilistic_2015_CVPR_paper.html}
+}
+
+@inproceedings{lam2015numba,
+  title = {Numba: A {{LLVM}}-Based {{Python JIT}} Compiler},
+  shorttitle = {Numba},
+  booktitle = {Proceedings of the {{Second Workshop}} on the {{LLVM Compiler Infrastructure}} in {{HPC}}},
+  author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
+  date = {2015-11-15},
+  pages = {1--6},
+  publisher = {{Association for Computing Machinery}},
+  location = {{Austin, Texas}},
+  doi = {10.1145/2833157.2833162},
+  url = {https://doi.org/10.1145/2833157.2833162},
+  urldate = {2020-07-28},
+  abstract = {Dynamic, interpreted languages, like Python, are attractive for domain-experts and scientists experimenting with new ideas. However, the performance of the interpreter is often a barrier when scaling to larger data sets. This paper presents a just-in-time compiler for Python that focuses in scientific and array-oriented computing. Starting with the simple syntax of Python, Numba compiles a subset of the language into efficient machine code that is comparable in performance to a traditional compiled language. In addition, we share our experience in building a JIT compiler using LLVM[1].},
+  file = {/home/philipp/Zotero/storage/BAV8URGH/Lam et al_2015_Numba.pdf},
+  isbn = {978-1-4503-4005-2},
+  series = {{{LLVM}} '15}
 }
 
 @article{laue2019equivalence,
