--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -42,15 +42,15 @@
 
 \usepackage[%
   backend=biber,
-  citestyle=alphabetic,
-  style=alphabetic,
+  citestyle=authoryear-comp,
+  style=authoryear,
   sortcites=true,
   sorting=nyt,
   %natbib=true,
   giveninits=true,
   %url=false,
   isbn=false,
-  date=ymd,
+  date=year,
   urldate=ymd
 ]{biblatex}
 \DeclareNameAlias{default}{last-first}
