Some references and minor stuff

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -163,18 +163,23 @@ domain-specific languages, they can also be embedded into \enquote{host} program
 sufficient syntactic flexibility.  The latter is advantageous if one wants to use regular
 general-purpose programming constructs or interact with other functionalities of the host language.
 
+See \textcite{vandemeent2018introduction} for a general introduction into the implementation of
+PPLs. \Textcite{goodman2014design} gives an in-depth overview of the implementation and usage of one
+specific, continuation-based implementation called WebPPL.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Compilation and Metaprogramming in Julia}
+\label{sec:comp-metapr-julia}
+
+\textcite{singer2018introduction}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Computation Graphs and Automatic Differentiation}
 \label{sec:graph-track-autom}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Metaprogramming and Compilation in Julia}
-\label{sec:metapr-comp-julia}
-
+% 1. AD in general
+% 2. Zygote principles
 
 
 
