--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -35,8 +35,8 @@
   code\footnote{See~\protect\url{https://docs.julialang.org/en/v1/manual/functions/\#man-vectorized-1}}:
   the function is applied over all elements of the input arrays individually, whereby arrays of
   lower rank or scalars are \enquote{broadcasted} along dimensions as necessary.
-\item[Julia code] Julia code (including identifiers mention in the text) is always typeset in
-  \jlinl{typewriter font}.
+\item[{\jlinlfont f(x) = rand(x)}] Julia code (including identifiers mention in the text) is always typeset in
+  typewriter font.
 \end{description}
 
 %%% Local Variables: 
