--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1,22 +1,4 @@
 
-@article{10.1145/3276490,
-  title = {Julia: {{Dynamism}} and Performance Reconciled by Design},
-  author = {Bezanson, Jeff and Chen, Jiahao and Chung, Benjamin and Karpinski, Stefan and Shah, Viral B. and Vitek, Jan and Zoubritzky, Lionel},
-  date = {2018-10},
-  journaltitle = {Proc. ACM Program. Lang.},
-  volume = {2},
-  publisher = {{Association for Computing Machinery}},
-  address = {New York, NY, USA},
-  doi = {10.1145/3276490},
-  url = {https://doi.org/10.1145/3276490},
-  articleno = {120},
-  file = {/home/philipp/Zotero/storage/WLAU4MCM/Bezanson et al. - Julia Dynamism and Performance Reconciled by Desi.pdf},
-  issue = {OOPSLA},
-  issue_date = {November 2018},
-  keywords = {dynamic languages,just-in-time compilation,multiple dispatch},
-  pagetotal = {23}
-}
-
 @unpublished{abadi2015tensorflow,
   title = {{{TensorFlow}}: {{Large}}-Scale Machine Learning on Heterogeneous Systems},
   author = {Abadi, Martín and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S. and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Goodfellow, Ian and Harp, Andrew and Irving, Geoffrey and Isard, Michael and Jia, Yangqing and Jozefowicz, Rafal and Kaiser, Lukasz and Kudlur, Manjunath and Levenberg, Josh and Mané, Dandelion and Monga, Rajat and Moore, Sherry and Murray, Derek and Olah, Chris and Schuster, Mike and Shlens, Jonathon and Steiner, Benoit and Sutskever, Ilya and Talwar, Kunal and Tucker, Paul and Vanhoucke, Vincent and Vasudevan, Vijay and Viégas, Fernanda and Vinyals, Oriol and Warden, Pete and Wattenberg, Martin and Wicke, Martin and Yu, Yuan and Zheng, Xiaoqiang},
@@ -105,6 +87,19 @@
   abstract = {Bridging cultures that have often been distant, Julia combines expertise from the diverse fields of computer science and computational science to create a new approach to numerical  computing. Julia is  designed to be easy and fast and questions notions generally held to be “laws of nature"  by practitioners of numerical computing: \textbackslash beginlist \textbackslash item  High-level dynamic programs have to be slow. \textbackslash item  One must prototype in one language and then rewrite in another language for speed or deployment. \textbackslash item There are parts of a system appropriate for the programmer, and other parts that are best left untouched as they have been built by the experts. \textbackslash endlist We introduce the  Julia programming language and its design---a  dance between specialization and abstraction. Specialization allows for custom treatment. Multiple dispatch,  a  technique from computer science, picks  the right algorithm for the right circumstance. Abstraction, which is what good computation is really about, recognizes what remains the same after differences are stripped away. Abstractions in mathematics are captured as code through another technique from computer science, generic programming. Julia shows that  one can achieve machine performance without sacrificing human convenience.},
   file = {/home/philipp/Zotero/storage/QCSTCADU/Bezanson et al_2017_Julia.pdf;/home/philipp/Zotero/storage/WW3Q6Q7D/141000671.html},
   number = {1}
+}
+
+@article{bezanson2018julia,
+  title = {Julia: {{Dynamism}} and Performance Reconciled by Design},
+  author = {Bezanson, Jeff and Chen, Jiahao and Chung, Benjamin and Karpinski, Stefan and Shah, Viral B. and Vitek, Jan and Zoubritzky, Lionel},
+  date = {2018-10},
+  journaltitle = {Proc. ACM Program. Lang.},
+  volume = {2},
+  doi = {10.1145/3276490},
+  url = {https://doi.org/10.1145/3276490},
+  file = {/home/philipp/Zotero/storage/WLAU4MCM/Bezanson et al. - Julia Dynamism and Performance Reconciled by Desi.pdf},
+  issue = {OOPSLA},
+  keywords = {dynamic languages,just-in-time compilation,multiple dispatch}
 }
 
 @article{bhat2012type,
@@ -985,6 +980,15 @@
   file = {/home/philipp/Zotero/storage/J3UHJCXN/Ścibior et al. - 2018 - Functional programming for modular Bayesian infere.pdf},
   issue = {ICFP},
   langid = {english}
+}
+
+@incollection{singer2018introduction,
+  title = {Introduction},
+  booktitle = {Single {{Static Assignment Book}}},
+  author = {Singer, J.},
+  date = {2018},
+  url = {http://ssabook.gforge.inria.fr/latest/book-full.pdf},
+  urldate = {2020-07-30}
 }
 
 @inproceedings{socher2011parsing,
